# NuDots

./: .gitignore  Cargo.toml  LICENSE  README.md  config.nu  config.vscode.nu  env.nu  history.txt  todo.md
functions/: autostart.nu  bluecon.nu  bluecon_bak  editsu.nu  fzf.nu  genuse.nu  gpu-mode.nu  mod.nu  nudo_file.nu  nudo_file_bak.nu  pacman_wrapper.nu  pkg_manager.nu  settings.nu  start_wm.nu  utils.nu
src/: errors.rs  lib.rs  main.rs  prelude.rs
src/commands/: add.rs  disable.rs  enable.rs  get.rs  mod.rs  nudo.rs  nustart.rs  remove.rs  start.rs  stop.rs  utils.rs
src/commands/pkg_manager/: cache.rs  install.rs  lib.rs  lib.rs_win  list.rs  mod.rs  pkg.rs  search.rs  uninstall.rs  update.rs
src/commands/utils/: anyoneof.rs  argsrequired.rs  dependency.rs  detectos.rs  detectos.rs_win  dev.rs  macros.rs  mod.rs  run.rs
src/plugin_command_macro/: Cargo.toml
src/plugin_command_macro/src/: lib.rs
src/plugincmd_procmacro/: Cargo.toml
src/syscalls/: execve.rs  fork.rs  getresuid.rs  kill.rs  mod.rs  setpgid.rs  setsid.rs
src/utils/: check_dependency.rs  macros.rs  mod.rs  save.rs  writelogic.rs
